	PR target/91204 	* optabs.c (expand_unop): As fallback, expand ~op0 as op0 ^ -1.

* gcc.c-torture/compile/pr91204.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@273629 138bc75d-0d04-0410-961f-82ee72b054a4